[PATCH] Notification z-index fix and error styling on login

--- a/client/app/sass/components/_feedback.scss
+++ b/client/app/sass/components/_feedback.scss
@@ -9,6 +9,7 @@
     text-align: center;
     top: 0;
     width: 100%;
+    z-index: 3;
 
     i {
         margin-right: 8px;
